@@ -26,8 +26,13 @@ import java.util.Map;
 import java.util.Iterator;
 
 /**
- * It test the network for sensiticity for random node removal. Of course it
- * does not actually remove nodes, it is only an observer.
+ * It tests the network for robustness to random node removal.
+ * It does not actually remove
+ * nodes, it is only an observer, so can be applied several times during the
+ * simulation. A warning though: as a side effect it <em>may
+ * shuffle the network</em> (see {@value #PAR_N}) so if this is an issue,
+ * it should not be used,
+ * or only after the simulation has finished.
  */
 public class RandRemoval extends GraphObserver
 {
@@ -39,7 +44,7 @@ public class RandRemoval extends GraphObserver
 /**
  * This parameter defines the number of runs of the iterative removal procedure
  * to get statistics. Look out: if set to a value larger than 1 then as a side
- * effect the overlay will be shuffled. Defaults to 1.
+ * effect <em>the overlay will be shuffled</em>. Defaults to 1.
  * @config
  */
 private static final String PAR_N = "n";
@@ -63,27 +68,28 @@ public RandRemoval(String name)
 // ====================== methods ======================================
 // =====================================================================
 
+/**
+* Prints results of node removal tests. The following experiment is
+* repeated {@value PAR_N} times. From the graph 50%, 51%, ..., 99% of the nodes
+* are removed at random. For all percentages it is calculated what is
+* the maximal
+* clustersize (weakly connected clusters) and the number of
+* clusters in the remaining graph.
+* These values are averaged over the experiments, and for all 50 different
+* percentage values a line is printed that contains the respective averages,
+* first the average maximal cluster size, followed by the average number
+* of clusters.
+* @return always false
+*/
 public boolean execute()
 {
+	if( n <= 1 ) return false;
+	updateGraph();
+	
 	System.out.println(name + ":");
-	if (n == 1) {
-		OverlayGraph og = new OverlayGraph(protocolID);
-		PrefixSubGraph g = new PrefixSubGraph(og);
-		IncrementalStats stats = new IncrementalStats();
-		for (int i = og.size() / 2; i > 0; i -= og.size() / 100) {
-			g.setSize(i);
-			Map clst = ga.weaklyConnectedClusters(g);
-			stats.reset();
-			Iterator it = clst.values().iterator();
-			while (it.hasNext()) {
-				stats.add(((Integer) it.next()).intValue());
-			}
-			System.out.println(stats);
-		}
-		return false;
-	}
+	
 	final int size = Network.size();
-	final int steps = 50; // XXX we assume net size is at least 100
+	final int steps = 50;
 	IncrementalStats[] maxClust = new IncrementalStats[steps];
 	IncrementalStats[] clustNum = new IncrementalStats[steps];
 	for (int i = 0; i < steps; ++i) {
@@ -91,13 +97,11 @@ public boolean execute()
 		clustNum[i] = new IncrementalStats();
 	}
 	for (int j = 0; j < n; ++j) {
-		Network.shuffle();
-		OverlayGraph og = new OverlayGraph(protocolID);
-		PrefixSubGraph g = new PrefixSubGraph(og);
+		PrefixSubGraph sg = new PrefixSubGraph(g);
 		IncrementalStats stats = new IncrementalStats();
 		for (int i = 0; i < steps; i++) {
-			g.setSize(size / 2 - i * (size / 100));
-			Map clst = ga.weaklyConnectedClusters(g);
+			sg.setSize(size / 2 - i * (size / 100));
+			Map clst = ga.weaklyConnectedClusters(sg);
 			stats.reset();
 			Iterator it = clst.values().iterator();
 			while (it.hasNext()) {
@@ -106,6 +110,7 @@ public boolean execute()
 			maxClust[i].add(stats.getMax());
 			clustNum[i].add(clst.size());
 		}
+		if( j+1 < n ) Network.shuffle();
 	}
 	for (int i = 0; i < steps; ++i) {
 		System.out.println(maxClust[i].getAverage() + " "
